--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+gunicorn==19.9.0
 pandas==1.0.5
-numpy==1.20.1
 Flask_Cors==3.0.10
 Flask==1.1.2
+numpy>=1.9.2
+scikit-learn>=0.18
+matplotlib>=1.4.3
